--- a/LoginApi/package.json
+++ b/LoginApi/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "create-subscription": "^17.0.0",
     "express": "^4.17.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "stripe": "^8.137.0",
+    "validator": "^13.5.2"
   }
 }
